plugins {
    id 'java'
    id 'org.springframework.boot' version '3.1.4'
    id 'io.spring.dependency-management' version '1.1.3'


}


apply plugin: 'java-library'
group = 'com.example'
version = '0.0.1-SNAPSHOT'


java {
    sourceCompatibility = '17'
}

repositories {
    mavenCentral()
}


dependencies {
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
    implementation 'org.springframework.boot:spring-boot-starter-validation'
    implementation 'org.springframework.boot:spring-boot-starter-web'
    compileOnly 'org.projectlombok:lombok'
    developmentOnly 'org.springframework.boot:spring-boot-devtools'
    runtimeOnly 'org.mariadb.jdbc:mariadb-java-client'
    annotationProcessor 'org.projectlombok:lombok'
    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    implementation 'org.springframework.security:spring-security-crypto'
    implementation group: 'org.modelmapper', name: 'modelmapper', version: '3.2.0'
    implementation group: 'com.cloudinary', name: 'cloudinary-http44', version: '1.30.0'
    implementation group: 'com.querydsl', name: 'querydsl-jpa', version: '4.3.1'
    implementation group: 'com.querydsl', name: 'querydsl-apt', version: '4.3.1'
    implementation group: 'com.querydsl', name: 'querydsl-core', version: '4.3.1'
    implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.2.0'
    implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'

}


tasks.named('test') {
    useJUnitPlatform()
}

